infrastructure/controllers/traefik/production/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  annotations:
    # Explicitly request the first IP the cilium IP pool
    io.cilium/lb-ipam-ips: "192.168.1.192"
  labels:
    # This MUST match the serviceSelector in your Cilium L2 Policy
    io.cilium/l2-announced: "true"
spec:
  type: LoadBalancer
